Edit about section with correct spacing

--- a/css/about.css
+++ b/css/about.css
@@ -450,43 +450,158 @@ footer .footer-logo-text p {
 
   /* FIRST SECTION */
   .first-section {
-    padding: 5vh 14vw;
     margin: 0%;
-    background-color: rgb(240, 240, 240);
+    background-color: #e6e1e177;
   }
 
-  .page-head .h1 {
-    font-size: 2em;
+  .page-head {
+    display: flex;
+    flex-direction: column;
+  }
+
+  h1 {
+    order: 2;
+    font-size: 2.5em;
+    line-height: 1em;
     margin: auto;
     /* stylelint-disable */
     font-family: Cocogoose;
     /* stylelint-enable */
     font-weight: normal;
     text-align: center;
-    padding: 0% 2vw;
+    padding: 8vh 2vw;
+    width: 40%;
   }
 
   .hello {
     display: none;
   }
 
+  .intro {
+    border: 1px white;
+    padding: 4vh 2vw;
+    font-size: 2em;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    line-height: 2em;
+    text-align: center;
+    width: 80%;
+    margin: auto;
+    color: #272a31b0;
+  }
+
+  .intro-p {
+    background-color: rgb(255, 251, 251);
+    width: 55%;
+    font-size: 2em;
+    font-family: 'Lato', sans-serif;
+    font-weight: 560;
+    line-height: 2em;
+    margin: auto;
+    color: #272a31b0;
+  }
+
+  .intro a {
+    text-decoration: underline;
+    font-weight: bold;
+    font-size: 1.2em;
+    font-family: 'Lato', sans-serif;
+    line-height: 2em;
+    color: #272a31;
+  }
+
   .logo-description {
-    margin: 2vh;
-    padding: 0%;
+    background-color: rgb(255, 251, 251);
+    font-size: 0.8em;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    line-height: 2em;
+    color: #272a31b0;
+    padding-top: 5vh;
   }
 
   .logo-description h2 {
+    border: 1px white;
+    font-size: 1.5em;
+    text-align: center;
+    margin: 0%;
+  }
+
+  .logo-description p {
+    border: 1px white;
+    padding: 2vh 2vw;
     font-size: 0.9em;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+    line-height: 2em;
+    text-align: center;
+    width: 40%;
+    margin: auto;
+    padding-bottom: 0%;
+    color: #272a31b0;
   }
 
   .cc-logo-description {
-    margin: 2vh auto;
-    padding: 1vh 0%;
+    display: flex;
+    flex-direction: column;
+    color: #272a31;
+    border: none;
+    width: 100%;
+    margin: auto;
+    padding: 9vh 2vw;
+    background-color: rgb(255, 251, 251);
+  }
+
+  .cc-logo-description-div h4 {
+    font-size: 1.9em !important;
+    font-stretch: ultra-condensed !important;
+    width: 70%;
+    font-weight: bold;
+    padding-left: 1vw;
+  }
+
+  .cc-logo-description div {
+    display: flex;
+    margin: 0% auto;
+    padding: 0% 18%;
+    align-items: center;
+    width: 20%;
+  }
+
+  .past-summit-img h4,
+  .past-summit-img p {
+    text-align: center;
+  }
+
+  .cc-logo-description div h4 {
+    font-size: 1.2em;
+    font-stretch: ultra-condensed;
+    font-weight: 800;
+    margin: 0%;
+  }
+
+  .cc-logo-description p {
+    margin: 0%;
+    padding: 0% 29%;
+    font-size: 0.4em;
+    text-align: center;
+    /* stylelint-disable */
+    font-family: Cocogoose;
+    /* stylelint-enable */
   }
 
   /* THE PAST SUMMITS SECTION */
   .second-section {
     padding: 5vh 14vw;
+    margin-top: 0%;
+  }
+
+  .second-section h2 {
+    font-size: 1em;
+  }
+
+  .second-section p {
+    font-size: 0.8em;
   }
 
   .intro {
@@ -496,13 +611,14 @@ footer .footer-logo-text p {
   .past-summits {
     display: flex;
     align-content: center;
-    margin: auto;
+    margin: 0% auto;
+    justify-content: center;
   }
 
   .past-summit-img {
-    margin: auto;
-    height: 18vh;
-    width: 34vw;
+    margin: 0% 0.5vw;
+    height: 25vh;
+    width: 25vw;
     align-self: center;
   }
 
